fixed signup (mispelling), got admin-only section working (removed a can read all), made any/all search mostly work (added == true because params returns a string not a boolean, and worked on more general layout issues in signin, signup, search, and results

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,7 +9,20 @@ p {
   font-weight: 300;
 }
 
-.tag{
+small {
+  font-weight: 300;
+}
+
+.formbox {
+  @extend .col-sm-offset-2;
+  @extend .col-md-offset-3; 
+  @extend .col-lg-offset-4;
+  @extend .col-sm-8;
+  @extend .col-md-6;
+  @extend .col-lg-4;
+}
+
+.tag {
   background-color: #c2daeb;
   font-weight: 400;
   margin: 4px 4px 9px 1px;
@@ -70,7 +83,7 @@ a.white-text {
   height: 100%;
 }*/
 
-@media (min-width: 0px) { 
+/*@media (min-width: 0px) { 
   body{font-size: 260%;}
 }
 
@@ -79,7 +92,12 @@ a.white-text {
   p{font-size: 1.2em;}
 }
 
-@media (min-width: 1160px) { 
+@media (min-width: 937px) { 
   body{font-size: 200%;}
   p{font-size: 1em;}
 }
+
+@media (min-width: 1160px) { 
+  body{font-size: 200%;}
+  p{font-size: 1em;}
+}*/
